# options_backtest

./: .gitignore  README.md  problem.md  pyproject.toml
options_backtest/: backtest.ipynb  trade_book.csv
options_backtest/config/: expiry_map.py  models.py
options_backtest/modules/: index_data.py  options_data.py  strategy.py
options_backtest/report/: backtest.md
